--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 
 <!--Site navigation menu-->
 <ul class ="navbar">
-<li>< a href=" ">Home page</ a>
-<li>< a href="musings.html">Musings</ a>
-<li>< a href="town.html">My town</ a>
-<li>< a href="links.html">Links</ a>
+<li>< a href=" ">Home page</a></li>
+<li>< a href="musings.html">Musings</a></li>
+<li>< a href="town.html">My town</a></li>
+<li>< a href="links.html">Links</a></li>
+<li><a href="MyPPT.pptx">MyPPT.pptx</a></li>
+<li><a href="MyWord.docx">MyWord.docx</a></li> 
+<li><a href="Mooncity.xlsx">Mooncity.xlsx</a></li> 
+<li><a href="piechart.xlsx">piechart.xlsx</a></li>
 </ul>
 <li><a >
 <hr color="blue" size="12" >
