--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <!--Site navigation menu-->
 <ul class ="navbar">
+<li><a href="index.html">Home page</a></li> 
+<li><a href="musings.html">Musings</a></li> 
+<li><a href="town.html">My town</a></li>
 <li><a href="MyPPT.pptx">MyPPT.pptx</a></li>
 <li><a href="MyWord.docx">MyWord.docx</a></li> 
 <li><a href="Mooncity.xlsx">Mooncity.xlsx</a></li> 
